@@ -20,13 +20,24 @@ if ($in{'delete'}) {
 else {
 	# update or create
 	@vals = ( $in{'action'} );
-	foreach $y (split(/\0/, $in{'yes'})) { push(@vals, $y); }
-	foreach $n (split(/\0/, $in{'no'})) { push(@vals, "!$n"); }
+	foreach $y (split(/\0/, $in{'yes'})) {
+		push(@vals, $y);
+		$used{$y}++;
+		}
+	foreach $n (split(/\0/, $in{'no'})) {
+		push(@vals, "!$n");
+		$used{$n}++;
+		}
 	$newhttp = { 'name' => 'http_access', 'values' => \@vals };
 	if ($http) { splice(@https, &indexof($http, @https), 1, $newhttp); }
 	else { push(@https, $newhttp); }
 	}
-&save_directive($conf, "http_access", \@https, "acl");
+
+# Find the last referenced ACL
+@acls = grep { $used{$_->{'values'}->[0]} } &find_config("acl", $conf);
+$lastacl = @acls ? $acls[$#acls] : undef;
+
+&save_directive($conf, "http_access", \@https, $lastacl);
 &flush_file_lines();
 &unlock_file($config{'squid_conf'});
 &webmin_log($in{'delete'} ? 'delete' : $http ? 'modify' : 'create', "http");
